# cybertranspay

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cloudbuild.build-only.yaml  cloudbuild.yaml
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml
backend/: Dockerfile  README.md
backend/routing-engine/: Cargo.toml  Dockerfile
backend/routing-engine/src/: api.rs  assets.rs  auth.rs  domain.rs  engine.rs  lib.rs  main.rs  quotes.rs  rates.rs  transfers.rs
backend/routing-engine/tests/: auth_middleware.rs  health.rs  quote.rs  spot_assets.rs  transfers.rs
backend/src/: main.rs
docs/: CLOUD_BUILD.md  CLOUD_BUILD_UPDATES.md  DEPLOY_GCP.md  DEPLOY_ROUTING_ENGINE.md  GCP_PROJECT.md  TRADEMARK.md  WHITEPAPER.md
frontend/: README.md  pubspec.yaml
frontend/lib/: config.dart  main.dart
frontend/lib/models/: country.dart  globe_transfer.dart  route_quote.dart
frontend/lib/screens/: account_screen.dart  globe_transfer_screen.dart  quote_screen.dart
frontend/lib/services/: api_client.dart  (+1 more)
frontend/linux/: CMakeLists.txt
frontend/test/: api_client_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
scripts/: deploy-routing-engine.cmd  gcp-apply.sh  gcp-bootstrap-state.sh  grant-cloudbuild-permissions.cmd  grant-cloudbuild-permissions.sh  set-routing-engine-auth.cmd  setup-cloudbuild-trigger.cmd  setup-cloudbuild-trigger.sh  update-routing-engine.cmd  update-routing-engine.sh
smart-contracts/: README.md
terraform/: backend.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
(+20 files in other folders)
